--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,9 @@
 
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+
+        crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 
@@ -21,10 +23,10 @@
 
 
 <body>
-    <!--  just another comment-->
+
     <!-- Hero Section Starts-->
 
-    <div class="heroSection">
+    <div class=" section heroSection">
 
         <div class="container">
 
@@ -70,13 +72,9 @@
 
                 <h1>Inspire your inspiration</h1>
 
-                <h2>Simple to use for your app, products showcase and your inspiration
+                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</h2>
 
-                </h2>
-
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste aperiam voluptas qui pariatur minus facere
-
-                    quam autem rerum nemo molestiae nihil ipsum nam sunt, soluta perspiciatis maxime quasi harum quibusdam.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste aperiam voluptas qui pariatur minus facere quam autem rerum nemo molestiae nihil ipsum nam sunt, soluta perspiciatis maxime quasi harum quibusdam.</p>
 
                 <div class="appLinks">
 
@@ -114,62 +112,360 @@
 
     </div>
 
-
-
     <!--Hero Section Ends -->
 
-    <!--feature Section start -->
 
-        <div class="Section">
-            <div class="container" >
-                <h2>Tinyone feature</h2>
-                <p class="tittleDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
 
-                <div class="row">
-                    <div class="featureitem">
-                        <div class="featureIcon">
-                            <i class="fal fa-mobile-android"></i>
-                        </div>
-                        <div class="featureDesc">
-                            <h3>Fully Responsive</h3>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut </p>
-                        </div>
-                        <div class="clear"></div>
+    <!-- Features section starts-->
+
+    <div class="section">
+
+        <div class="container">
+
+            <h2>Tinyone Features</h2>
+
+            <p class="titleDesc"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco</p>
+
+            <div class="row">
+
+                <div class="featuresItem">
+
+                    <div class="featuresIcon">
+
+                        <i class="fas fa-mobile-alt"></i>
 
                     </div>
+
+                    <div class="featuresDesc">
+
+                        <h3>Fully Responsive</h3>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempo </p>
+
+                    </div>
+
+                    <div class="clear"></div>
+
                 </div>
+
+                <div class="featuresItem">
+
+                    <div class="featuresIcon">
+
+                        <i class="far fa-lemon"></i>
+
+                    </div>
+
+                    <div class="featuresDesc">
+
+                        <h3>Fully Responsive</h3>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempo </p>
+
+                    </div>
+
+                    <div class="clear"></div>
+
+                </div>
+
+                <div class="featuresItem">
+
+                    <div class="featuresIcon">
+
+                        <i class="far fa-folder"></i>
+
+                    </div>
+
+                    <div class="featuresDesc">
+
+                        <h3>Fully Responsive</h3>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempo </p>
+
+                    </div>
+
+                    <div class="clear"></div>
+
+                </div>
+
+                <div class="clear"></div>
+
             </div>
+
+            <div class="row">
+
+                <div class="featuresItem">
+
+                    <div class="featuresIcon">
+
+                        <i class="fas fa-code"></i>
+
+                    </div>
+
+                    <div class="featuresDesc">
+
+                        <h3>Fully Responsive</h3>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempo </p>
+
+                    </div>
+
+                    <div class="clear"></div>
+
+                </div>
+
+                <div class="featuresItem">
+
+                    <div class="featuresIcon">
+
+                        <i class="far fa-envelope"></i>
+
+                    </div>
+
+                    <div class="featuresDesc">
+
+                        <h3>Fully Responsive</h3>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempo </p>
+
+                    </div>
+
+                    <div class="clear"></div>
+
+                </div>
+
+                <div class="featuresItem">
+
+                    <div class="featuresIcon">
+
+                        <i class="far fa-bookmark"></i>
+                    </div>
+
+                    <div class="featuresDesc">
+
+                        <h3>Fully Responsive</h3>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempo </p>
+
+                    </div>
+
+                    <div class="clear"></div>
+
+                </div>
+
+                <div class="clear"></div>
+
+            </div>
+
         </div>
+
+
 
     </div>
 
-    <!--feature Section Ends -->
+    <!-- Features section ends-->
 
 
-    <!--keep Section start -->
 
-    <div class="keepsection">
+    <!--Keep in touch section starts-->
+
+    <div class="section keepSection">
+
         <div class="container">
+
             <h2>Keep in touch with us</h2>
 
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste aperiam voluptas qui pariatur minus facere
+            <p class="titleDesc"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco</p>
 
-                quam autem rerum nemo molestiae nihil ipsum nam sunt, soluta perspiciatis maxime quasi harum quibusdam.</p>
+            <form action="">
+
+                <input class="mailInput" type="text" placeholder="Enter your email to update">
+
+                <input class="submitInput" type="submit" value="Submit">
+
+            </form>
+
+            <div class="social">
+
+                <a href="##">
+
+                    <i class="fab fa-facebook-f"></i>
+
+                </a>
+
+                <a href="##">
+
+                    <i class="fab fa-twitter"></i>
+
+                </a>
+
+                <a href="##">
+
+                    <i class="fab fa-google-plus-g"></i>
+
+                </a>
+
+                <a href="##">
+
+                    <i class="fab fa-pinterest-p"></i>
+
+                </a>
+
+            </div>
+
         </div>
-        <form action="">
-            <input class="mailInput" type="text" placeholder="enter your email to update" name="">
-            <input class="submitInput" type="submit" name="">
-        </form>
+
+
+
     </div>
 
-    <!--keep Section Ends -->
+    <!--Keep in touch section ends-->
+
+    <!--Footer section starts-->
+
+    <div class="section keepSection">
+
+        <div class="container">
+
+            <div class="footerColumn">
+
+                <p>
+
+                    HALOVIETNAM LTD
+
+                    <br> 66, Dang Van ngu, Dong Da Hanoi, Vietnam
+
+                </p>
+
+                <span>contact@halovietnam.com</span>
+
+                <span>+344 35149182</span>
 
 
 
+            </div>
+
+            <div class="footerColumn">
+
+                <ul>
+
+                    <li>
+
+                        <a href="##">Examples</a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="##">Shop</a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="##">License</a>
+
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <div class="footerColumn">
+
+                <ul>
+
+                    <li>
+
+                        <a href="##">Contact</a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="##">About</a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="##">Privesy</a>
+
+                    </li>
+
+                     <li>
+
+                        <a href="##">Termes</a>
+
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <div class="footerColumn">
+
+                <ul>
+
+                    <li>
+
+                        <a href="##">Download</a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="##">Support</a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="##">Document</a>
+
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <div class="footerColumn">
+
+                <ul>
+
+                    <li>
+
+                        <a href="##">Media</a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="##">Blog</a>
+
+                    </li>
+
+                    <li>
+
+                        <a href="##">Features</a>
+
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <div class="clear"></div>
+
+        </div>
+
+    </div>
+
+    <!--Footer Section ends-->
 </body>
-
-
 
 </html>
